# PiApproximation

./: .gitignore  CMakeLists.txt  Doxyfile  Main_8cpp.html  Main_8cpp.js  README.md  README_8md.html  annotated.html  annotated_dup.js  classRandom-members.html  classRandom.html  classRandom.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  index.html  navtreedata.js  navtreeindex0.js  sonar-project.properties  vcpkg.json
.github/workflows/: Build.yml  SonarCloud.yml  cmake.yml
search/: all_0.js  all_1.js  all_3.js  all_5.js  classes_0.js  functions_0.js  searchdata.js  variables_0.js
src/: Main.cpp
